@@ -1287,6 +1287,10 @@ condition|)
 name|aquireWriteLock
 argument_list|()
 expr_stmt|;
+name|hasChanges
+operator|=
+literal|true
+expr_stmt|;
 name|doSetNorm
 argument_list|(
 name|doc
@@ -1295,10 +1299,6 @@ name|field
 argument_list|,
 name|value
 argument_list|)
-expr_stmt|;
-name|hasChanges
-operator|=
-literal|true
 expr_stmt|;
 block|}
 comment|/** Implements setNorm in subclass.*/
@@ -1710,12 +1710,12 @@ condition|)
 name|aquireWriteLock
 argument_list|()
 expr_stmt|;
-name|doUndeleteAll
-argument_list|()
-expr_stmt|;
 name|hasChanges
 operator|=
 literal|true
+expr_stmt|;
+name|doUndeleteAll
+argument_list|()
 expr_stmt|;
 block|}
 comment|/** Implements actual undeleteAll() in subclass. */
