@@ -4263,6 +4263,163 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+DECL|method|testExceptionReleaseWriteLockJIRA768
+specifier|public
+name|void
+name|testExceptionReleaseWriteLockJIRA768
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+operator|new
+name|RAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|addDoc
+argument_list|(
+name|writer
+argument_list|,
+literal|"aaa"
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexReader
+name|reader
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|reader
+operator|.
+name|deleteDocument
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"did not hit exception when deleting an invalid doc number"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ArrayIndexOutOfBoundsException
+name|e
+parameter_list|)
+block|{
+comment|// expected
+block|}
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|IndexReader
+operator|.
+name|isLocked
+argument_list|(
+name|dir
+argument_list|)
+condition|)
+block|{
+name|fail
+argument_list|(
+literal|"write lock is still held after close"
+argument_list|)
+expr_stmt|;
+block|}
+name|reader
+operator|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|reader
+operator|.
+name|setNorm
+argument_list|(
+literal|1
+argument_list|,
+literal|"content"
+argument_list|,
+operator|(
+name|float
+operator|)
+literal|2.0
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"did not hit exception when calling setNorm on an invalid doc number"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ArrayIndexOutOfBoundsException
+name|e
+parameter_list|)
+block|{
+comment|// expected
+block|}
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|IndexReader
+operator|.
+name|isLocked
+argument_list|(
+name|dir
+argument_list|)
+condition|)
+block|{
+name|fail
+argument_list|(
+literal|"write lock is still held after close"
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 DECL|method|arrayToString
 specifier|private
 name|String
